Fixed text hiding behind gifs. WTF CSS

--- a/src/index.scss
+++ b/src/index.scss
@@ -187,7 +187,6 @@ html, body {
         font-weight: bold;
         text-shadow: -1px 0px 0px #000000;
         text-decoration: underline wavy;
-        mix-blend-mode: multiply;
         color: #7b9eff;
     }
 }
